# KinDynSolverInterface

./: .gitmodules  CMakeLists.txt  README.md
config/: KDMI-config.cmake.in  version.h.in
include/: KinDynModel.hpp  KinDynModelFactory.hpp  KinDynModelRBDL.hpp
src/: KinDynModel.cpp  KinDynModelFactory.cpp  KinDynModelRBDL.cpp
